--- a/mindmap_example.ipynb
+++ b/mindmap_example.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "37421.11s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+      "37594.81s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
      ]
     },
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,23 @@
     "import graphviz\n",
     "from graphviz import Digraph\n",
     "from relatedworkanalyzer import RelatedWorkAnalyzer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 428,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load from pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "rwa = RelatedWorkAnalyzer()"
    ]
   },
   {
@@ -47,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,29 +101,25 @@
     "            print(\"{} cited by {}\".format(rwa.paper_list[cited_paper]['title'], rwa.paper_list[paperId]['title']))\n",
     "            s.node(cited_paper, label=changeLine(rwa.paper_list[cited_paper]['title']), color=ref_node_color, fontcolor=ref_node_color)\n",
     "            s.edge(paperId, cited_paper, color=ref_node_color, style = \"dashed\")\n",
-    "            s.edge(cited_paper, str(rwa.paper_list[cited_paper]['year']), arrowhead='none', color=\"#0000004f\")"
+    "            s.edge(cited_paper, str(rwa.paper_list[cited_paper]['year']), arrowhead='none', color=\"#0000004f\")\n",
+    "\n",
+    "def changeLine(paper):\n",
+    "    items = paper.split(\" \")\n",
+    "    num_words = len(items)\n",
+    "    num_words_per_line = 4\n",
+    "    new_paper = \"\"\n",
+    "    for i in range(num_words):\n",
+    "        new_paper += items[i]\n",
+    "        if (i+1) % num_words_per_line == 0:\n",
+    "            new_paper += \"\\\\n\"\n",
+    "        else:\n",
+    "            new_paper += \" \"\n",
+    "    return new_paper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "load from pkl\n"
-     ]
-    }
-   ],
-   "source": [
-    "rwa = RelatedWorkAnalyzer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +128,7 @@
        "[2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023]"
       ]
      },
-     "execution_count": 420,
+     "execution_count": 430,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -250,10 +263,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x16721a470>"
+       "<graphviz.graphs.Digraph at 0x168dfe4a0>"
       ]
      },
-     "execution_count": 421,
+     "execution_count": 431,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +297,7 @@
        "'test.gv.pdf'"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 436,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -3746,10 +3759,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x16721a470>"
+       "<graphviz.graphs.Digraph at 0x168dfe4a0>"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3761,20 +3774,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 435,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'test.gv.pdf'"
-      ]
-     },
-     "execution_count": 340,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# back to default graph\n",
     "s = copy.deepcopy(default_graph)\n",
